# python-cpp-Interface

./: LICENSE  README.md
pybind11_2DArray_advanced_cmake/: CMakeLists.txt  README.md
pybind11_2DArray_advanced_cmake/src/: cpp_code.cpp  main.py
pybind11_2DArray_advanced_fancy_streamlit_cmake/: CMakeLists.txt  README.md
pybind11_2DArray_advanced_fancy_streamlit_cmake/src/: main.py
pybind11_2DArray_cmake/: CMakeLists.txt  README.md
pybind11_2DArray_cmake/src/: pybind11.cpp
pybind11_array_advanced_cmake/: CMakeLists.txt  README.md
pybind11_array_advanced_cmake/src/: cpp_code.cpp  main.py
pybind11_array_cmake/: CMakeLists.txt  README.md
pybind11_array_cmake/src/: module.py  pybind.cpp
python_c_api_2DArray_cmake/: CMakeLists.txt  README.md
python_c_api_2DArray_cmake/src/: module.py  python_c_api.cpp
python_c_api_example_cmake/: CMakeLists.txt  README.md
python_c_api_example_cmake/src/: main.cpp  module.py
